--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,54 @@ img {
     width: 100%;
     object-fit: cover;
 }
+/* Imageslide  css */
+.slider {
+  margin-top: 20px;
+  position: relative;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 600px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  right: 32px;
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  background-color: unset;
+}
+
+.left-arrow {
+  position: absolute;
+  top: 50%;
+  left: 32px;
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  background-color: unset;
+}
+
+.slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
+}
 
 /* ============ MEDIA QUERIES(MEDIUM DEVICES) =========== */
 @media screen and (max-width: 1024px) {
