--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -17,7 +17,7 @@
     float: left;
     padding-top: 23px;
     text-align: center;
-    padding-left: 80px;
+    /* padding-left: 80px; */
 }
 .footerHeading{
     font-size: 18px;
@@ -29,7 +29,7 @@
 }
 .rguktLogo{
     width: 240px;
-    height: 140px;
+    height: 100px;
     display: block;
   margin-left: auto;
   margin-right: auto;
@@ -38,6 +38,14 @@
     padding-top: 23px;
     text-align: center;
 } 
+
+.footerLeftList li {
+    color: var(--color-bg);
+}
+.footerLeftList li:hover {
+    color: var(--color-white);
+    text-decoration: underline;
+}
 .footer__socialMedia {
     display: flex;
     gap: 1rem;
@@ -75,7 +83,7 @@ footer a {
 
 
 /* ============ MEDIA QUERIES(medium DEVICES) =========== */
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1024px) {
     .footerabove{
         padding: auto;
     }
@@ -94,6 +102,7 @@ footer a {
     .footerabove{
         display: flex;
         flex-direction: column;
+        padding-bottom: 3rem;
     }
     .footerabove{
         padding: auto;
