--- a/src/components/Header/stickyheader.css
+++ b/src/components/Header/stickyheader.css
@@ -7,7 +7,6 @@
     height: 6rem;
     z-index: 1;
 }
-
 .ts-logo__header {
     float: left;
     width: 15rem; 
@@ -18,7 +17,8 @@
     position: absolute;
     top: 0.5rem;
     left: 43%;
-
+    align-items: center;
+    justify-content: center;
     width: 9rem;
 }
 
@@ -30,5 +30,7 @@
 
     .logo__header {
         width: 7rem;
+        align-items: center;
+        justify-content: center;
     }
 }
