--- a/src/components/NewsEvents/newsEvents.css
+++ b/src/components/NewsEvents/newsEvents.css
@@ -50,23 +50,17 @@ iframe{
 
 /* ============ MEDIA QUERIES(MEDIUM DEVICES) =========== */
 @media screen and (max-width: 1024px) {
-    .videos{
-         display: grid;
-        grid-template-columns: repeat(2, minmax(200px, 1fr)); /* Adjust the dimensions as needed */
-        grid-gap: 20px; /* Adjust the gap between images as needed */
-        background-color: rgb(196, 214, 208);
-        height: calc();
+    .galary-images {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
     }
 }
 
 /* ============ MEDIA QUERIES(SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
-    .videos{
-         display: grid;
-            grid-template-columns: repeat(1, minmax(200px, 1fr)); /* Adjust the dimensions as needed */
-            grid-gap: 20px; /* Adjust the gap between images as needed */
-            background-color: rgb(196, 214, 208);
-            height: calc();
+    .galary-images {
+        grid-template-columns: 1fr;
+        gap: 1rem;
     }
     .iframe{
         height: 250px;
