--- a/src/components/NewsEvents/newsEvents.css
+++ b/src/components/NewsEvents/newsEvents.css
@@ -2,26 +2,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(247, 171, 250);
-    font-size: 30px;
+    color: rgb(177, 130, 179);
+    font-size: 33px;
+}
+.newsEvents{
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-direction: column;
 }
 .news{
-    top: 5px;
-    bottom: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     height: calc();
-    border: 2px;
+    /* border: 2px; */
     border-style: none;
     border-color: rgb(241, 235, 235);
 }
 .news:hover{
-    background-color: rgba(215, 249, 255, 0.445);
+    background-color: rgba(163, 150, 150, 0.445);
     
 }
+.news a h3{
+    font-size: 20px;
+}
 .text{
-    top: 0;
+    margin-top: -10px;
 }
 .text p{
-    size: 2px;
+    font-size:15px;
 }
 .text p b{
     color: rgb(247, 183, 183);
@@ -50,19 +59,25 @@ iframe{
 
 /* ============ MEDIA QUERIES(MEDIUM DEVICES) =========== */
 @media screen and (max-width: 1024px) {
-    .galary-images {
-        grid-template-columns: 1fr 1fr;
+    .videos {
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
         gap: 1.2rem;
+    }
+    .heading{
+        font-size: 25px;
     }
 }
 
 /* ============ MEDIA QUERIES(SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
-    .galary-images {
-        grid-template-columns: 1fr;
+    .videos {
+        grid-template-columns: repeat(1, minmax(200px, 1fr));
         gap: 1rem;
     }
     .iframe{
         height: 250px;
+    }
+    .heading{
+        font-size:20px;
     }
 }
