--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -2,13 +2,14 @@
     background: var(--color-primary);
     position: sticky; 
     top: 5.8rem;
-    z-index: 1;   
+    z-index: 1; 
+    width: 100%;  
 }
 nav{
     display: flex;
     justify-content: center;
     padding: 1rem 0 1rem 0;
-    gap: 3rem;  
+    gap: 3rem;
 }
 
 nav a {
