--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -45,6 +45,9 @@ nav a.active {
     
     display: none;
 }
+.cancel-button{
+    display: none;
+}
 
 /* ============= MEDIA QUERIES (for 1024px) ============= */
 @media screen and (max-width: 1024px) {
@@ -78,7 +81,21 @@ nav a.active {
         z-index: 2;
         margin-top: -70px;
     }
+    .cancel-button{
+        width: 40px;;
+        height: 40px;
+        cursor: pointer;
+        position: absolute;
+        left: 90%;
+        z-index: 2;
+        margin-top: -70px;
+        display: none;
+    }
+    .cancel-button.active{
+        display: block;
+    }
     .menu-button.active{
+        display: none;
         
     }
 }
