--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -41,6 +41,109 @@
     color: var(--color-light);
 }
 
+.contact-footer h1{
+    font-size: 20px;
+}
+
+.contact-footer h3{
+    font-size: 18px;
+    padding: auto;
+}
+
+.left h3{
+    padding-bottom: 10px;
+}
+
+.imageC {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    align-items: center;
+    height: 115px;
+    background: var(--color-bg);
+    margin: 10px;
+    border-radius: 10px;
+    padding: 20px;
+    width: 450px;
+}
+
+.imageC:hover {
+    border: 1px solid var(--color-light);
+    transition: var(--transition);
+}
+
+.details {
+    text-align: center;
+    height: 100px;
+    width: 350px;
+}
+
+.image h3 {
+    padding-left: 0px;
+}
+
+.img-container {
+    width: 90px;
+    height: 100px;
+    overflow: hidden;
+    align-items: center;
+} 
+
+.img {
+    padding-left: 10px;
+
+    display: grid;
+    border-radius: 10px;
+    /* padding-top: 20px; */
+}
+
+.contact-footer {
+    text-align: center;
+    padding-top: 30px;
+    background: var(--color-bg-variant);
+    display: grid;
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    align-items: center;
+}
+
+.center {
+    padding-top: 50px;
+    align-items: center;
+}
+
+.rgukt {
+    width: 450px;
+    background: var(--color-bg);
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.rgukt:hover {
+    border: 2px solid var(--color-white);
+    transition: var(--transition);
+}
+
+.right h1 {
+    padding-bottom: 50px;
+}
+
+.right h3 {
+    padding-bottom: 10px;
+}
+
+.students {
+    margin-left: 10px;
+    padding: 20px 0 20px 0;
+    background: var(--color-bg);
+    transition: var(--transition);
+    border-radius: 10px;
+    margin-right: 10px;
+}
+
+.students:hover {
+    border: 1px solid var(--color-white);
+    transition: var(--transition);
+}
+
 /* =============  FORM ===============*/
 form {
     display: flex;
@@ -64,11 +167,20 @@ input, textarea {
         grid-template-columns: 1fr;
         gap: 2rem;
     }
+
+    .contact-footer {
+        grid-template-columns: 1fr 1fr;
+        width: var(--width-md);
+    }
 }
 
 /* ============ MEDIA QUERIES(SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
     .container.contact__container {
         width: var(--container-width-sm);
+    }
+
+    .contact-footer {
+        grid-template-columns: 1fr;
     }
 }
