--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap'); */
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +8,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
 }
 
 :root {
