--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,3 +1,6 @@
+.contact{
+    width: 100%;
+}
 .container.contact__container {
     width: 58%;
     display: grid;
@@ -40,7 +43,17 @@
 .contact__option h5 {
     color: var(--color-light);
 }
-
+.contact-footer {
+    text-align: center;
+    padding-top: 30px;
+    background: var(--color-bg-variant);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: calc();
+    width: 100%;
+}
 .contact-footer h1{
     font-size: 20px;
 }
@@ -54,58 +67,19 @@
     padding-bottom: 10px;
 }
 
-.imageC {
-    display: grid;
-    grid-template-columns: 20% 80%;
-    align-items: center;
-    height: 115px;
+.details {
+    height: 85px;
     background: var(--color-bg);
     margin: 10px;
     border-radius: 10px;
     padding: 20px;
-    width: 100%;
+    width: 400px;
+    text-align: center;
 }
-
-.imageC:hover {
+.details:hover {
     border: 1px solid var(--color-light);
     transition: var(--transition);
 }
-
-.details {
-    text-align: center;
-    height: 100px;
-    width: 350px;
-}
-
-.image h3 {
-    padding-left: 0px;
-}
-
-.img-container {
-    width: 90px;
-    height: 100px;
-    overflow: hidden;
-    align-items: center;
-} 
-
-.img {
-    padding-left: 10px;
-
-    display: grid;
-    border-radius: 10px;
-    /* padding-top: 20px; */
-}
-
-.contact-footer {
-    text-align: center;
-    padding-top: 30px;
-    background: var(--color-bg-variant);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
 .center {
     padding-top: 50px;
     align-items: center;
@@ -115,11 +89,15 @@
     display: grid;
     justify-content: center;
 }
-
+.center .rgukt h2{
+    font-size: 20px;
+}
 .rgukt {
     width: 450px;
     background: var(--color-bg);
     border-radius: 10px;
+    border-top: 5px;
+    border-bottom: 5px;
 }
 
 .rgukt:hover {
@@ -196,32 +174,28 @@ input, textarea {
     .container.contact__container {
         width: var(--container-width-sm);
     }
-    .left{
+    .contact-footer{
         width: 100%;
+    }
+    .left{
+        width: 95%;
         display: flex;
         flex-direction: column;
     }
     .left h3{
         font-size: 15px;
     }
-    .imageC{
-        width: 100%;
+    .details{
+        width: 95%;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-    }
-    .img-container{
-        display: grid;
-        align-items: center;
-    }
-    .details{
-        display: grid;
-        align-items: center;
+        height: calc();
     }
     .rgukt{
-        width: 100%;
-        font-size: 15px;
+        width: 95%;
+        font-size: 14px;
     }
 
 }
