--- a/src/components/Galary/galary.css
+++ b/src/components/Galary/galary.css
@@ -1,13 +1,14 @@
 .galary-images {
+    margin: 2rem;
     display: grid;
     grid-template-columns: repeat(3, minmax(200px, 1fr)); /* Adjust the dimensions as needed */
-    grid-gap: 10px; /* Adjust the gap between images as needed */
+    grid-gap: 12px; /* Adjust the gap between images as needed */
 }
 
 .galary-image {
     background: var(--color-bg-variant);
-    padding: 1rem;
-    border-radius: 2rem;
+    padding: 0.5rem;
+    border-radius: 0.7rem;
     border: 1px solid transparent;
     transition: var(--transition);
     width: 100%;
@@ -19,7 +20,9 @@
 
 .galary-image:hover {
     border-color: var(--color-primary-variant);
-    background: transparent;
+    background: navy;
+    box-shadow: 4px 4px 10px 5px var(--color-white);
+    transform: scale(1.05);
 }
 
 /* .toy-image {
@@ -28,13 +31,14 @@
 } */
 
 .toy-image img{
-    width:400px;
+    width:300px;
     height: 300px;
     object-fit: fill;
-    border-radius: 1.5rem;
+    border-radius: 0.7rem;
     /* object-fit: cover; */
     /* object-position: center; */
 }
+
 .galary-image h3 {
     margin: 1.2rem 0 2rem;
 }
@@ -49,16 +53,53 @@
 
 /* ============ MEDIA QUERIES(MEDIUM DEVICES) =========== */
 @media screen and (max-width: 1024px) {
+    .toy-image img{
+        width:90%;
+        height: 90%;
+        object-fit: fill;
+        border-radius: 0.5rem;
+        /* object-fit: cover; */
+        /* object-position: center; */
+    }
     .galary-images {
+        width: 80%;
+        padding: 2px;
+        margin: 5px auto;
         grid-template-columns: 1fr 1fr;
-        gap: 1.2rem;
+        gap:5px;
+    }
+    .about{
+        text-align: center;
+        font-size: smaller;
     }
 }
 
 /* ============ MEDIA QUERIES(SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
+    .toy-image img{
+        width:90%;
+        height: 90%;
+        /* height: 300px; */
+        object-fit: fill;
+        border-radius: 0.5rem;
+        margin:1px auto;
+        /* object-fit: cover; */
+        /* object-position: center; */
+    }
     .galary-images {
+        width: 80%;
+        padding: 2px;
+        margin: 3px auto;
         grid-template-columns: 1fr;
-        gap: 1rem;
+        gap: 0.5rem;
+    }
+    .about{
+        text-align: center;
+        font-size: smaller;
+    }
+    .btn{
+        padding:4px;
+        border-radius: 2px;
+        font-size: smaller;
     }
 }
