--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -52,6 +52,7 @@ nav a.active {
         gap: 0.5rem;
         /* font-size: 1rem; */
     }
+
 }
 
 /* ============= MEDIA QUERIES (for 600px) ============= */
@@ -76,8 +77,6 @@ nav a.active {
         left: 90%;
         z-index: 2;
         margin-top: -70px;
-    }
-    .menu-button.active{
-        
+        padding-right: 2%;
     }
 }
