--- a/src/components/NewsEvents/newsEvents.css
+++ b/src/components/NewsEvents/newsEvents.css
@@ -6,6 +6,7 @@
     font-size: 30px;
 }
 .news{
+    padding:15px;
     top: 5px;
     bottom: 5px;
     height: calc();
@@ -13,9 +14,16 @@
     border-style: none;
     border-color: rgb(241, 235, 235);
 }
-.news:hover{
-    background-color: rgba(215, 249, 255, 0.445);
-    
+.news h3:hover{
+    display:inline-block;
+    background-color: rgb(233, 81, 225);
+    color:#0a0a23;
+    padding: 2px;
+    border-radius: 4px;
+}
+.videos-heading{
+    background-color: rgb(196, 214, 208);
+    color:#0a0a23;
 }
 .text{
     top: 0;
@@ -30,15 +38,14 @@
 .videos{
     display: grid;
     grid-template-columns: repeat(3, minmax(200px, 1fr)); /* Adjust the dimensions as needed */
-    grid-gap: 20px; /* Adjust the gap between images as needed */
+    grid-gap: 12px; /* Adjust the gap between images as needed */
     background-color: rgb(196, 214, 208);
     height: calc();
 }
 .video{
     /* background: var(--color-bg-variant); */
-    padding: 1rem;
-    border-radius: 2rem;
-    border: 1px solid transparent;
+    margin:2px auto;
+    padding: 0.25rem 1rem;
     transition: var(--transition);
     width: 100%;
     object-fit: fill;
@@ -50,19 +57,19 @@ iframe{
 
 /* ============ MEDIA QUERIES(MEDIUM DEVICES) =========== */
 @media screen and (max-width: 1024px) {
-    .galary-images {
+    .videos{
         grid-template-columns: 1fr 1fr;
-        gap: 1.2rem;
+        gap: 0.5rem;
     }
 }
 
 /* ============ MEDIA QUERIES(SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
-    .galary-images {
+    .videos {
         grid-template-columns: 1fr;
-        gap: 1rem;
+        gap: 0.2em;
     }
-    .iframe{
-        height: 250px;
+    .heading{
+        font-size:18px;
     }
 }
