--- a/src/components/Header/stickyheader.css
+++ b/src/components/Header/stickyheader.css
@@ -6,6 +6,8 @@
     top: 0;
     height: 6rem;
     z-index: 1;
+    display: flex;
+    align-items: center;
 }
 .ts-logo__header {
     float: left;
@@ -25,12 +27,12 @@
 /* ============ MEDIA QUERIES(SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
     .ts-logo__header {
-        width: 12rem;
+        object-fit: fill;
+        width: 150px;
+        height: 70px;
     }
 
     .logo__header {
-        width: 7rem;
-        align-items: center;
-        justify-content: center;
+        
     }
 }
